tests/ui/error-emitter/multibyte-char-in-diagnostic-source-line.stderr
error[E0308]: mismatched types
  --> $DIR/issue-44023.rs:3:36
   |
LL | fn საჭმელად_გემრიელი_სადილი ( ) -> isize {
   |    ------------------------        ^^^^^ expected `isize`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
